--- a/index.css
+++ b/index.css
@@ -19,7 +19,7 @@ h1, h2{
 }
 
 h1{
-    font-size: 28px;
+    font-size: 38px;
 }
 
 h2 {
@@ -27,6 +27,7 @@ h2 {
 }
 
 h3{
+    font-size: 26px;
     margin: 25px;
     color: #6C5F5B;
 }
@@ -43,11 +44,11 @@ header{
     margin: 0 auto;
     width: 370px;
     gap: 15px;
-    padding: 10px 0 0 0;
+    padding: 10px 0;
 }
 
 .skull-img{
-    width: 80px;
+    width: 150px;
 }
 
 .main {
@@ -56,7 +57,7 @@ header{
 .controls-container{
     display: flex;
     flex-direction: column;
-    width: 200px;
+    width: 80%;
     margin: 0px auto;
 }
 
